Pandas features extracted

--- a/DataScience/FootballData.ipynb
+++ b/DataScience/FootballData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 241,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,7 @@
     "import pymssql\n",
     "import pandas as pd\n",
     "import pyodbc\n",
+    "import numpy as np\n",
     "conn = pyodbc.connect(\"Driver={SQL Server Native Client 11.0};\"\n",
     "                     \"Server=Martin-PC\\SQLEXPRESS;\"\n",
     "                     \"Database=FootballData;\"\n",
@@ -22,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(7416, 12)\n"
+      "(7400, 12)\n"
      ]
     },
     {
@@ -260,7 +261,7 @@
        "9           39  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,14 +283,14 @@
     "LEFT JOIN [Teams] as Teams2 ON Matches.AwayTeam_Id = Teams2.Id\"\"\"\n",
     "# Excute Query here\n",
     "df_matches = pd.read_sql(stmt,conn)\n",
-    "df_matches.drop_duplicates(['ExternalId'])\n",
+    "df_matches.drop_duplicates(['ExternalId'], inplace=True)\n",
     "print(df_matches.shape)\n",
     "df_matches.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +358,7 @@
        "1   2    3649357  1723985      9   30618   8650"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +370,155 @@
     "df_corners = pd.read_sql(stmt,conn)\n",
     "#df_corners = df_corners['Minute'].notnull()\n",
     "print(df_corners.shape)\n",
+    "df_corners.drop_duplicates(['ExternalId'], inplace=True)\n",
     "df_corners.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(79153, 6)\n",
+      "(78322, 6)\n",
+      "(90166, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>ExternalId</th>\n",
+       "      <th>MatchId</th>\n",
+       "      <th>Minute</th>\n",
+       "      <th>HomePossession</th>\n",
+       "      <th>AwayPossession</th>\n",
+       "      <th>TeamId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3645948</td>\n",
+       "      <td>1723984</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3652653</td>\n",
+       "      <td>1723983</td>\n",
+       "      <td>23</td>\n",
+       "      <td>35</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3646197</td>\n",
+       "      <td>1723984</td>\n",
+       "      <td>44</td>\n",
+       "      <td>36</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3652713</td>\n",
+       "      <td>1723983</td>\n",
+       "      <td>44</td>\n",
+       "      <td>35</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3646619</td>\n",
+       "      <td>1723984</td>\n",
+       "      <td>69</td>\n",
+       "      <td>37</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id ExternalId  MatchId  Minute  HomePossession  AwayPossession  TeamId\n",
+       "0   1    3645948  1723984      23              39              61       0\n",
+       "1   2    3652653  1723983      23              35              65       0\n",
+       "2   3    3646197  1723984      44              36              64       0\n",
+       "3   4    3652713  1723983      44              35              65       0\n",
+       "4   5    3646619  1723984      69              37              63       0"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Shots on select\n",
+    "stmt = \"SELECT * FROM ShotOns\"\n",
+    "# Excute Query here\n",
+    "df_shots_on = pd.read_sql(stmt,conn)\n",
+    "#df_corners = df_corners['Minute'].notnull()\n",
+    "print(df_shots_on.shape)\n",
+    "df_shots_on.drop_duplicates(['ExternalId'], inplace=True)\n",
+    "\n",
+    "#Shots off select\n",
+    "stmt = \"SELECT * FROM ShotOffs\"\n",
+    "# Excute Query here\n",
+    "df_shots_off = pd.read_sql(stmt,conn)\n",
+    "#df_corners = df_corners['Minute'].notnull()\n",
+    "print(df_shots_off.shape)\n",
+    "df_shots_off.drop_duplicates(['ExternalId'], inplace=True)\n",
+    "\n",
+    "#Possessions select\n",
+    "stmt = \"SELECT * FROM Possessions\"\n",
+    "# Excute Query here\n",
+    "df_possessions = pd.read_sql(stmt,conn)\n",
+    "#df_corners = df_corners['Minute'].notnull()\n",
+    "print(df_possessions.shape)\n",
+    "df_possessions.drop_duplicates(['ExternalId'], inplace=True)\n",
+    "df_possessions.replace('', np.nan, inplace=True)\n",
+    "df_possessions.dropna(axis=0, how='any', inplace=True)\n",
+    "\n",
+    "df_possessions['HomePossession'] = df_possessions['HomePossession'].astype(int)\n",
+    "df_possessions['AwayPossession'] = df_possessions['AwayPossession'].astype(int)\n",
+    "df_possessions['Minute'] = df_possessions['Minute'].astype(int)\n",
+    "#df_possessions['TeamId'] = df_possessions['TeamId'].astype(str)\n",
+    "df_possessions.head()\n"
    ]
   },
   {
@@ -3161,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 263,
    "metadata": {
     "scrolled": true
    },
@@ -3170,35 +3319,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for(2, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId      Type TeamId\n",
+      "4271  2781967    8259585     37    73167     None  distance   9825\n",
+      "4272  2781967    8259646     41   604785    73167      shot   9825\n",
+      "for (2, 7)\n",
       "against(3, 7)\n",
+      "for58.25\n",
+      "against41.75\n",
       "\n",
-      "for(0, 7)\n",
+      "Empty DataFrame\n",
+      "Columns: [MatchId, ExternalId, Minute, ScorerId, AssistId, Type, TeamId]\n",
+      "Index: []\n",
+      "for (0, 7)\n",
       "against(2, 7)\n",
+      "for42.61904761904762\n",
+      "against57.38095238095238\n",
       "\n",
-      "for(1, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId    Type TeamId\n",
+      "4047  2523115    8004517     38   150565    75489  tap_in   9825\n",
+      "for (1, 7)\n",
       "against(0, 7)\n",
+      "for46.3\n",
+      "against53.7\n",
       "\n",
-      "for(1, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId        Type TeamId\n",
+      "3866  2523046    7985057     53   150565     None  loose_ball   9825\n",
+      "for (1, 7)\n",
       "against(3, 7)\n",
+      "for52.2\n",
+      "against47.8\n",
       "\n",
-      "for(5, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId    Type TeamId\n",
+      "4022  2523103    7972387     14   150565   169193  tap_in   9825\n",
+      "4023  2523103    7973282     45   169193   427438    shot   9825\n",
+      "4024  2523103    7974014     54   304345   143793    shot   9825\n",
+      "4025  2523103    7974378     64   604785   150565    shot   9825\n",
+      "4026  2523103    7974574     75   150565   427438    shot   9825\n",
+      "for (5, 7)\n",
       "against(0, 7)\n",
+      "for60.78947368421053\n",
+      "against39.21052631578947\n",
       "\n",
-      "for(1, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId  Type TeamId\n",
+      "4006  2523097    7939246     51    73167   207236  shot   9825\n",
+      "for (1, 7)\n",
       "against(3, 7)\n",
+      "for55.45\n",
+      "against44.55\n",
       "\n",
-      "for(4, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId       Type TeamId\n",
+      "3974  2523083    7903115     51    38521   207236     volley   9825\n",
+      "3976  2523083    7903813     82    75489     None   distance   9825\n",
+      "3977  2523083    7903899     85   169193   150565  deflected   9825\n",
+      "3978  2523083    7904056     89   169193    75489       shot   9825\n",
+      "for (4, 7)\n",
       "against(1, 7)\n",
+      "for66.7\n",
+      "against33.3\n",
       "\n",
-      "for(1, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId    Type TeamId\n",
+      "3956  2523078    7864650     14   169193   150565  volley   9825\n",
+      "for (1, 7)\n",
       "against(2, 7)\n",
+      "for30.45\n",
+      "against69.55\n",
       "\n",
-      "for(3, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId       Type TeamId\n",
+      "3915  2523063    7834868     28   150565   113836       shot   9825\n",
+      "3916  2523063    7835056     38   113836   604785  deflected   9825\n",
+      "3920  2523063    7836485     81   113836   604785     header   9825\n",
+      "for (3, 7)\n",
       "against(2, 7)\n",
+      "for63.8\n",
+      "against36.2\n",
       "\n",
-      "for(3, 7)\n",
+      "      MatchId ExternalId Minute ScorerId AssistId  Type TeamId\n",
+      "3886  2523053    7801435     75   150565     None  None   9825\n",
+      "3887  2523053    7801607     86   150565     None  shot   9825\n",
+      "3888  2523053    7801664     89   169193     None  None   9825\n",
+      "for (3, 7)\n",
       "against(0, 7)\n",
+      "for64.75\n",
+      "against35.25\n",
       "\n"
      ]
     },
@@ -3340,7 +3542,7 @@
        "1440         2907         2908  "
       ]
      },
-     "execution_count": 215,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3360,15 +3562,27 @@
     "        teamId = row['HomeTeamId'] if isHome else row['AwayTeamId']\n",
     "        teamAgainstId = row['HomeTeamId'] if not isHome else row['AwayTeamId']\n",
     "        \n",
-    "        match_goals_for = df_goals[(df_goals['TeamId'] == teamId)]\n",
-    "        match_goals_for = match_goals_for[match_goals_for['MatchId'] == row['ExternalId']]\n",
+    "        match_goals_for = df_goals[(df_goals['TeamId'] == teamId) & (df_goals['MatchId'] == row['ExternalId'])]\n",
+    "        match_goals_against = df_goals[(df_goals['TeamId'] == teamAgainstId) & (df_goals['MatchId'] == row['ExternalId'])]\n",
     "        \n",
-    "        match_goals_against = df_goals[(df_goals['TeamId'] == teamAgainstId)]\n",
-    "        match_goals_against = match_goals_against[match_goals_against['MatchId'] == row['ExternalId']]\n",
+    "        match_corners_for = df_corners[(df_corners['TeamId'] == teamId) & (df_corners['MatchId'] == row['ExternalId'])]\n",
+    "        match_corners_against = df_corners[(df_corners['TeamId'] == teamAgainstId) & (df_corners['MatchId'] == row['ExternalId'])]\n",
     "        \n",
+    "        match_shotson_for = df_shots_on[(df_shots_on['TeamId'] == teamId) & (df_shots_on['MatchId'] == row['ExternalId'])]\n",
+    "        match_shotson_against = df_shots_on[(df_shots_on['TeamId'] == teamAgainstId) & (df_shots_on['MatchId'] == row['ExternalId'])]\n",
     "        \n",
-    "        print(\"for\" + str(match_goals_for.shape))\n",
+    "        match_shotsoff_for = df_shots_off[(df_shots_off['TeamId'] == teamId) & (df_shots_off['MatchId'] == row['ExternalId'])]\n",
+    "        match_shotsoff_against = df_shots_off[(df_shots_off['TeamId'] == teamAgainstId) & (df_shots_off['MatchId'] == row['ExternalId'])]\n",
+    "        \n",
+    "        match_possession_for = df_possessions[(df_possessions['MatchId'] == row['ExternalId'])]['HomePossession']\n",
+    "        match_possession_against = df_possessions[(df_possessions['MatchId'] == row['ExternalId'])]['AwayPossession']\n",
+    "        \n",
+    "        print(match_goals_for)\n",
+    "        print(\"for \" + str(match_goals_for.shape))\n",
     "        print(\"against\" +  str(match_goals_against.shape))\n",
+    "        \n",
+    "        print(\"for\" + str(np.mean(match_possession_for)))\n",
+    "        print(\"against\" +  str(np.mean(match_possession_against)))\n",
     "        print()\n",
     "    #Return last matches\n",
     "    return last_matches\n",
