--- a/DataScience/FootballData.ipynb
+++ b/DataScience/FootballData.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "9           39  "
       ]
      },
-     "execution_count": 216,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,6 +284,7 @@
     "# Excute Query here\n",
     "df_matches = pd.read_sql(stmt,conn)\n",
     "df_matches.drop_duplicates(['ExternalId'], inplace=True)\n",
+    "df_matches['Date']=pd.to_datetime(df_matches['Date'])\n",
     "print(df_matches.shape)\n",
     "df_matches.head(10)"
    ]
@@ -3310,100 +3311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 272,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      MatchId ExternalId Minute ScorerId AssistId      Type TeamId\n",
-      "4271  2781967    8259585     37    73167     None  distance   9825\n",
-      "4272  2781967    8259646     41   604785    73167      shot   9825\n",
-      "for (2, 7)\n",
-      "against(3, 7)\n",
-      "for58.25\n",
-      "against41.75\n",
-      "\n",
-      "Empty DataFrame\n",
-      "Columns: [MatchId, ExternalId, Minute, ScorerId, AssistId, Type, TeamId]\n",
-      "Index: []\n",
-      "for (0, 7)\n",
-      "against(2, 7)\n",
-      "for42.61904761904762\n",
-      "against57.38095238095238\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId    Type TeamId\n",
-      "4047  2523115    8004517     38   150565    75489  tap_in   9825\n",
-      "for (1, 7)\n",
-      "against(0, 7)\n",
-      "for46.3\n",
-      "against53.7\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId        Type TeamId\n",
-      "3866  2523046    7985057     53   150565     None  loose_ball   9825\n",
-      "for (1, 7)\n",
-      "against(3, 7)\n",
-      "for52.2\n",
-      "against47.8\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId    Type TeamId\n",
-      "4022  2523103    7972387     14   150565   169193  tap_in   9825\n",
-      "4023  2523103    7973282     45   169193   427438    shot   9825\n",
-      "4024  2523103    7974014     54   304345   143793    shot   9825\n",
-      "4025  2523103    7974378     64   604785   150565    shot   9825\n",
-      "4026  2523103    7974574     75   150565   427438    shot   9825\n",
-      "for (5, 7)\n",
-      "against(0, 7)\n",
-      "for60.78947368421053\n",
-      "against39.21052631578947\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId  Type TeamId\n",
-      "4006  2523097    7939246     51    73167   207236  shot   9825\n",
-      "for (1, 7)\n",
-      "against(3, 7)\n",
-      "for55.45\n",
-      "against44.55\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId       Type TeamId\n",
-      "3974  2523083    7903115     51    38521   207236     volley   9825\n",
-      "3976  2523083    7903813     82    75489     None   distance   9825\n",
-      "3977  2523083    7903899     85   169193   150565  deflected   9825\n",
-      "3978  2523083    7904056     89   169193    75489       shot   9825\n",
-      "for (4, 7)\n",
-      "against(1, 7)\n",
-      "for66.7\n",
-      "against33.3\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId    Type TeamId\n",
-      "3956  2523078    7864650     14   169193   150565  volley   9825\n",
-      "for (1, 7)\n",
-      "against(2, 7)\n",
-      "for30.45\n",
-      "against69.55\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId       Type TeamId\n",
-      "3915  2523063    7834868     28   150565   113836       shot   9825\n",
-      "3916  2523063    7835056     38   113836   604785  deflected   9825\n",
-      "3920  2523063    7836485     81   113836   604785     header   9825\n",
-      "for (3, 7)\n",
-      "against(2, 7)\n",
-      "for63.8\n",
-      "against36.2\n",
-      "\n",
-      "      MatchId ExternalId Minute ScorerId AssistId  Type TeamId\n",
-      "3886  2523053    7801435     75   150565     None  None   9825\n",
-      "3887  2523053    7801607     86   150565     None  shot   9825\n",
-      "3888  2523053    7801664     89   169193     None  None   9825\n",
-      "for (3, 7)\n",
-      "against(0, 7)\n",
-      "for64.75\n",
-      "against35.25\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -3542,7 +3454,7 @@
        "1440         2907         2908  "
       ]
      },
-     "execution_count": 263,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3557,39 +3469,179 @@
     "    #Filter x last matches from team matches\n",
     "    last_matches = team_matches[team_matches.Date < date].sort_values(by = 'Date', ascending = False).iloc[0:x,:]\n",
     "\n",
-    "    for index, row in last_matches.iterrows():\n",
-    "        isHome = True if  row['HomeTeam'] == team else False\n",
-    "        teamId = row['HomeTeamId'] if isHome else row['AwayTeamId']\n",
-    "        teamAgainstId = row['HomeTeamId'] if not isHome else row['AwayTeamId']\n",
-    "        \n",
-    "        match_goals_for = df_goals[(df_goals['TeamId'] == teamId) & (df_goals['MatchId'] == row['ExternalId'])]\n",
-    "        match_goals_against = df_goals[(df_goals['TeamId'] == teamAgainstId) & (df_goals['MatchId'] == row['ExternalId'])]\n",
-    "        \n",
-    "        match_corners_for = df_corners[(df_corners['TeamId'] == teamId) & (df_corners['MatchId'] == row['ExternalId'])]\n",
-    "        match_corners_against = df_corners[(df_corners['TeamId'] == teamAgainstId) & (df_corners['MatchId'] == row['ExternalId'])]\n",
-    "        \n",
-    "        match_shotson_for = df_shots_on[(df_shots_on['TeamId'] == teamId) & (df_shots_on['MatchId'] == row['ExternalId'])]\n",
-    "        match_shotson_against = df_shots_on[(df_shots_on['TeamId'] == teamAgainstId) & (df_shots_on['MatchId'] == row['ExternalId'])]\n",
-    "        \n",
-    "        match_shotsoff_for = df_shots_off[(df_shots_off['TeamId'] == teamId) & (df_shots_off['MatchId'] == row['ExternalId'])]\n",
-    "        match_shotsoff_against = df_shots_off[(df_shots_off['TeamId'] == teamAgainstId) & (df_shots_off['MatchId'] == row['ExternalId'])]\n",
-    "        \n",
-    "        match_possession_for = df_possessions[(df_possessions['MatchId'] == row['ExternalId'])]['HomePossession']\n",
-    "        match_possession_against = df_possessions[(df_possessions['MatchId'] == row['ExternalId'])]['AwayPossession']\n",
-    "        \n",
-    "        print(match_goals_for)\n",
-    "        print(\"for \" + str(match_goals_for.shape))\n",
-    "        print(\"against\" +  str(match_goals_against.shape))\n",
-    "        \n",
-    "        print(\"for\" + str(np.mean(match_possession_for)))\n",
-    "        print(\"against\" +  str(np.mean(match_possession_against)))\n",
-    "        print()\n",
     "    #Return last matches\n",
     "    return last_matches\n",
     "\n",
     "last_matches = get_last_matches(\"2018-08-27 15:00:00\", \"Arsenal\")\n",
     "last_matches.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_match_features(match, x = 10):\n",
+    "    ''' Create match specific features for a given match. '''\n",
+    "    \n",
+    "    #Define variables\n",
+    "    date = match.Date\n",
+    "    home_team = match.HomeTeam\n",
+    "    away_team = match.AwayTeam\n",
+    "    \n",
+    "    #Get last x matches of home and away team\n",
+    "    matches_home_team = get_last_matches(date, home_team, x = 10)\n",
+    "    matches_away_team = get_last_matches(date, away_team, x = 10)\n",
+    "    \n",
+    "    goals_for_home = goals_against_home = corners_for_home = corners_against_home = shotson_for_home = shotson_against_home = shotsoff_for_home = shotsoff_against_home = 0\n",
+    "    goals_for_away = goals_against_away = corners_for_away = corners_against_away = shotson_for_away = shotson_against_away = shotsoff_for_away = shotsoff_against_away = 0\n",
+    "    for index, row in matches_home_team.iterrows():\n",
+    "        isHome = True if  row['HomeTeam'] == home_team else False\n",
+    "        teamId = row['HomeTeamId'] if isHome else row['AwayTeamId']\n",
+    "        teamAgainstId = row['HomeTeamId'] if not isHome else row['AwayTeamId']\n",
+    "\n",
+    "        match_goals_for = df_goals[(df_goals['TeamId'] == teamId) & (df_goals['MatchId'] == row['ExternalId'])]\n",
+    "        goals_for_home += match_goals_for.shape[0]\n",
+    "        \n",
+    "        match_goals_against = df_goals[(df_goals['TeamId'] == teamAgainstId) & (df_goals['MatchId'] == row['ExternalId'])]\n",
+    "        goals_against_home += match_goals_against.shape[0]\n",
+    "        \n",
+    "        match_corners_for = df_corners[(df_corners['TeamId'] == teamId) & (df_corners['MatchId'] == row['ExternalId'])]\n",
+    "        corners_for_home += match_corners_for.shape[0]\n",
+    "        \n",
+    "        match_corners_against = df_corners[(df_corners['TeamId'] == teamAgainstId) & (df_corners['MatchId'] == row['ExternalId'])]\n",
+    "        corners_against_home += match_corners_against.shape[0]\n",
+    "        \n",
+    "        match_shotson_for = df_shots_on[(df_shots_on['TeamId'] == teamId) & (df_shots_on['MatchId'] == row['ExternalId'])]\n",
+    "        shotson_for_home += match_shotson_for.shape[0]\n",
+    "        \n",
+    "        match_shotson_against = df_shots_on[(df_shots_on['TeamId'] == teamAgainstId) & (df_shots_on['MatchId'] == row['ExternalId'])]\n",
+    "        shotson_against_home += match_shotson_against.shape[0]\n",
+    "        \n",
+    "        match_shotsoff_for = df_shots_off[(df_shots_off['TeamId'] == teamId) & (df_shots_off['MatchId'] == row['ExternalId'])]\n",
+    "        shotsoff_for_home += match_shotson_for.shape[0]\n",
+    "        \n",
+    "        match_shotsoff_against = df_shots_off[(df_shots_off['TeamId'] == teamAgainstId) & (df_shots_off['MatchId'] == row['ExternalId'])]\n",
+    "        shotsoff_against_home += match_shotson_against.shape[0]\n",
+    "        \n",
+    "        match_possession_for = df_possessions[(df_possessions['MatchId'] == row['ExternalId'])]['HomePossession']\n",
+    "        match_possession_against = df_possessions[(df_possessions['MatchId'] == row['ExternalId'])]['AwayPossession']\n",
+    "\n",
+    "        #print(\"for \" + str(match_goals_for.shape[0]))\n",
+    "        #print(\"against \" +  str(match_goals_against.shape[0]))\n",
+    "\n",
+    "        #print(\"for \" + str(np.mean(match_possession_for)))\n",
+    "        #print(\"against \" +  str(np.mean(match_possession_against)))\n",
+    "#     #Get last x matches of both teams against each other\n",
+    "#     last_matches_against = get_last_matches_against_eachother(matches, date, home_team, away_team, x = 3)\n",
+    "    \n",
+    "    result = pd.DataFrame()\n",
+    "    \n",
+    "   # result.loc[0, 'match_api_id'] = match.match_api_id\n",
+    "    result.loc[0, 'league_id'] = match.Div\n",
+    "\n",
+    "#     #Create match features\n",
+    "    result.loc[0, 'home_team_goals_for'] = goals_for_home\n",
+    "    result.loc[0, 'home_team_goals_against'] = goals_against_home\n",
+    "    \n",
+    "    result.loc[0, 'home_team_corners_for'] = corners_for_home\n",
+    "    result.loc[0, 'home_team_corners_against'] = corners_against_home\n",
+    "    \n",
+    "    result.loc[0, 'home_team_shotson_for'] = shotson_for_home\n",
+    "    result.loc[0, 'home_team_shotson_against'] = shotson_against_home\n",
+    "    \n",
+    "    result.loc[0, 'home_team_shotsoff_for'] = shotsoff_for_home\n",
+    "    result.loc[0, 'home_team_shotsoff_against'] = shotsoff_against_home\n",
+    "#     result.loc[0, 'away_team_goals_difference'] = away_goals - away_goals_conceided\n",
+    "#     result.loc[0, 'games_won_home_team'] = get_wins(matches_home_team, home_team) \n",
+    "#     result.loc[0, 'games_won_away_team'] = get_wins(matches_away_team, away_team)\n",
+    "#     result.loc[0, 'games_against_won'] = get_wins(last_matches_against, home_team)\n",
+    "#     result.loc[0, 'games_against_lost'] = get_wins(last_matches_against, away_team)\n",
+    "    \n",
+    "    #Return match features\n",
+    "    return result.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 74)"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from random import random\n",
+    "import numpy as np\n",
+    "\n",
+    "#player=pd.read_csv('data/player_stats.csv')\n",
+    "#player['birthday']=pd.to_datetime(player['birthday'])\n",
+    "#files=[2014,2015,2016,2017,2018]\n",
+    "files=[2018]\n",
+    "missing=[]    \n",
+    "alldata=[]\n",
+    "\n",
+    "for f in files:\n",
+    "    matches_with_odds = pd.read_csv('DataAnalysisFootball/data/' + str(f)+'.csv')\n",
+    "    #keep only completed games\n",
+    "    matches_with_odds['Date']=pd.to_datetime(matches_with_odds['Date'])\n",
+    "    \n",
+    "    #turn surface to lowrcase\n",
+    "    \n",
+    "    match_stats = matches_with_odds.apply(lambda x: get_match_features(x, x = 10), axis = 1)\n",
+    "    match_stats_and_odds = pd.concat([matches_with_odds, match_stats], axis=1)\n",
+    "    \n",
+    "    #print(match_stats)\n",
+    "    #for index,row in games.iterrows():\n",
+    "          #print(index)\n",
+    "#                 #assign the winner randomly to the left or the right hand side.\n",
+    "#                 if random()>0.5:\n",
+    "#                     dummy['winner']=0\n",
+    "#                     dummy=pd.Series(dummy)\n",
+    "#                     data=[winner_data.values[0],loser_data.values[0],dummy.values]\n",
+    "#                     data=np.hstack(data)\n",
+    "#                     df=pd.DataFrame(data)\n",
+    "#                     df=df.transpose()\n",
+    "#                     df.columns=np.hstack(['player0_'+winner_data.columns,'player1_'+loser_data.columns,dummy.index])\n",
+    "#                 else:\n",
+    "#                     dummy['winner']=1\n",
+    "#                     dummy=pd.Series(dummy)\n",
+    "#                     data=[winner_data.values[0],loser_data.values[0],dummy.values]\n",
+    "#                     data=np.hstack(data)\n",
+    "#                     df=pd.DataFrame(data)\n",
+    "#                     df=df.transpose()\n",
+    "#                     df.columns=np.hstack(['player0_'+loser_data.columns,'player1_'+winner_data.columns,dummy.index])\n",
+    "                \n",
+    "#                 alldata.append(df)\n",
+    "#             except:\n",
+    "#                 pass\n",
+    "match_stats_and_odds.head(10)\n",
+    "match_stats_and_odds.shape\n",
+    "# missing=set(missing)        \n",
+    "# data=pd.concat(alldata,axis=0)\n",
+    "# data.to_csv('data/football_data.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
