Football data creation improvements

--- a/DataScience/FootballData.ipynb
+++ b/DataScience/FootballData.ipynb
@@ -3567,20 +3567,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 316,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 74)"
-      ]
-     },
-     "execution_count": 313,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from random import random\n",
@@ -3592,16 +3581,16 @@
     "files=[2018]\n",
     "missing=[]    \n",
     "alldata=[]\n",
-    "\n",
+    "data_folder = 'DataAnalysisFootball/data/'\n",
     "for f in files:\n",
-    "    matches_with_odds = pd.read_csv('DataAnalysisFootball/data/' + str(f)+'.csv')\n",
+    "    matches_with_odds = pd.read_csv(data_folder + str(f)+'.csv')\n",
     "    #keep only completed games\n",
     "    matches_with_odds['Date']=pd.to_datetime(matches_with_odds['Date'])\n",
     "    \n",
     "    #turn surface to lowrcase\n",
     "    \n",
     "    match_stats = matches_with_odds.apply(lambda x: get_match_features(x, x = 10), axis = 1)\n",
-    "    match_stats_and_odds = pd.concat([matches_with_odds, match_stats], axis=1)\n",
+    "    alldata.append(pd.concat([matches_with_odds, match_stats], axis=1))\n",
     "    \n",
     "    #print(match_stats)\n",
     "    #for index,row in games.iterrows():\n",
@@ -3627,11 +3616,11 @@
     "#                 alldata.append(df)\n",
     "#             except:\n",
     "#                 pass\n",
-    "match_stats_and_odds.head(10)\n",
-    "match_stats_and_odds.shape\n",
+    "match_stats_and_odds.head(30)\n",
+    "#match_stats_and_odds.shape\n",
     "# missing=set(missing)        \n",
-    "# data=pd.concat(alldata,axis=0)\n",
-    "# data.to_csv('data/football_data.csv',index=False)"
+    "data=pd.concat(alldata,axis=0)\n",
+    "data.to_csv(data_folder + '/football_data.csv',index=False)"
    ]
   },
   {
